--- a/src/Grid.css
+++ b/src/Grid.css
@@ -58,6 +58,15 @@
     color: darkslategrey
 }
 
+.instructions {
+    width: 50vw;
+    color: bisque;
+    font-weight: 500;
+    margin: 50px auto;
+    text-align: center;
+    font-size: larger;
+}
+
 .background-square {
     position: fixed;
     top: 50%;
